[tool.poetry]
name = "pysupporthelper"
version = "0.1.0"
description = ""
authors = ["Sam Morgan <sama4mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyinstaller = "^5.7.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
